--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,1 +1,14 @@
 // Custom styles.
+@media screen and (min-width:1200px) {
+
+    body {
+    background-image:url(/images/bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    background-position:50% 50%; 
+    }
+
+    #footer a {
+        color:#eee;
+    }
+}
